--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@
 
 html,
 body {
+    background-color: #F9F5F1;
   padding: 0;
   margin: 0;
   font-family: Roboto Mono, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
